Finalized Divi Vault with lock + NFT minting + result page

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <title>Divi Labs</title>
   </head>
   <body>
+    <!-- The root div where your React app will be injected -->
     <div id="root"></div>
+
+    <!-- Include the generated JavaScript bundle (make sure the file name matches the build output) -->
+    <!-- Adjust the filename if necessary, e.g., it might look like main.xxxxx.js -->
+    <script src="/static/js/main.575d80c7.js"></script>
   </body>
 </html>
